--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.3",
+    "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
