--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.18.3",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.2.0",
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1",
